# qubes-salt

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .rpmlintrc  .rumdl.toml  .salt-lint  AGENTS.md  CLAUDE.md  LICENSE  LICENSE.md  Makefile  Makefile.am  README.md  auto  cliff.toml  config.yml  configure.ac  pillar.example  qubes-mgmt-salt-user.spec  qubes-user-salt.spec  user-salts.spec.in
.builds/: push.yml
.forgejo/issue_template/: config.yml  new_qube.yaml  release.yaml
.forgejo/workflows/: codeberg.yml  lints.yml  release.yml
.gitlab/issue_templates/: new_templatevm.md
ci/: check-sls-files.sh  release.sh  salt-lint.sh  shellcheck.sh
conf/: overrides.conf  z_user.conf
config/: user.conf  user_includes.conf.tpl
docs/: releases.md  style-guide.md
docs/release-notes/: v2025.10.1.0.md  v2025.10.2.0.md  v2026.3.1.0.md  v2026.4.1.0.md  v2026.4.2.0.md
hack/: dom0.mk  salt.mk
qubes-mgmt-salt-user/: app-dev.top  app-element.top  app-libreoffice.top  app-qb.top  app-senpai.top  app-signal.top  app-thunderbird.top  app-tuta.top  common.top  disp-sys-net-eth.top  disp-sys-usb.top  dom0.top  dvm-debian-13-minimal.top  dvm-dev.top  dvm-fedora-42-minimal.top  dvm-fedora-42-xfce.top  dvm-fedora-43-minimal.top  dvm-fedora-43-xfce.top  dvm-fetch.top  dvm-firefox.top  dvm-ks-17-minimal.top  dvm-ks-18-minimal.top  dvm-mgmt.top  dvm-qb-executor.top  dvm-sys-firewall-linux.top  dvm-sys-net.top  dvm-sys-usb.top  dvm-transmission.top  dvm-trivalent.top  dvm-whonix-workstation-17.top  dvm-whonix-workstation-18.top  on-debian-13-minimal.top  on-fedora-42-minimal.top  on-fedora-42-xfce.top  on-fedora-43-minimal.top  on-fedora-43-xfce.top  on-kicksecure-17-minimal.top  on-kicksecure-18-minimal.top  on-whonix-workstation-17.top  on-whonix-workstation-18.top  (+34 more)
qubes-mgmt-salt-user/appvms/app-dev/: init.sls
qubes-mgmt-salt-user/appvms/app-element/: init.sls
qubes-mgmt-salt-user/appvms/app-libreoffice/: init.sls
qubes-mgmt-salt-user/appvms/app-qb/: configure.sls  create_vm.sls  opts.jinja
qubes-mgmt-salt-user/appvms/app-senpai/: init.sls
qubes-mgmt-salt-user/appvms/app-signal/: init.sls
qubes-mgmt-salt-user/appvms/app-thunderbird/: configure.sls  create_vm.sls  defaults.yml  init.sls  opts.jinja
qubes-mgmt-salt-user/appvms/app-tuta/: init.sls
qubes-mgmt-salt-user/appvms/sys-firewall-linux/: create_vm.sls  init.sls  opts.jinja
qubes-mgmt-salt-user/appvms/sys-net/: create_vm.sls  defaults.yml  init.sls  opts.jinja
qubes-mgmt-salt-user/appvms/sys-net-wifi/: create_vm.sls  init.sls  opts.jinja
qubes-mgmt-salt-user/appvms/sys-onlykey/: configure.sls  create_vm.sls  init.sls  opts.jinja
qubes-mgmt-salt-user/appvms/sys-tor-whonix/: init.sls  (+1 more)
qubes-mgmt-salt-user/common/: https-proxy.sls  init.sls  locale.sls  patch-salt-templatepy.sls  qubes-ctapproxy.sls  replace-zenity.sls  update.sls  xfce4-helpers.sls
qubes-mgmt-salt-user/dom0/: base-templates.sls  init.sls  patch-python-modules.sls
qubes-mgmt-salt-user/utils/: banner.jinja  pci_net_devs.jinja  user_info.jinja
rpm_spec/: qubes-mgmt-salt-user.spec.in  qubes-user-salt.spec.in
scripts/: autoclean.sh  autogen.sh  bundle.sh  f_defaults.conf.patch  generate-install-mk.sh  lift.sh  patch-f_defaults.sh  salt-lint.sh  setup.sh  shellcheck.sh
src/pillar/: base_templates.sls  config.sls  defaults.sls  names.sls  opts.sls  overrides.sls  top.sls  vm_names.sls
src/salt/: app-dino.top  app-libreoffice.top  app-simple-x.top  app-thunderbird.top  base-templates.top  disp-sys-firewall-mirageos-eth.top  disp-sys-firewall-mirageos-wifi.top  dom0.top  dvm-browsers-fedora.top  dvm-dev-f41.top  dvm-dev.top  dvm-fedora-41-xfce.top  dvm-fedora-xfce.top  dvm-firewall-mirageos.top  dvm-librewolf-f41.top  dvm-librewolf.top  dvm-salt-mgmt.top  dvm-trivalent.top  on-debian-12-minimal.top  on-fedora-40-minimal.top  on-fedora-40-xfce.top  on-fedora-41-minimal.top  on-fedora-41-xfce.top  on-fedora-42-minimal.top  on-fedora-42-xfce.top  on-kicksecure-17.top  on-whonix-17-gateway.top  on-whonix-17-workstation.top  provides-appimage.top  provides-audio.top  provides-browsers-on-fedora.top  provides-docker.top  provides-firewall-linux.top  provides-firewall-mirageos.top  provides-flatpak.top  provides-gui.top  provides-guivm.top  provides-ivpn.top  provides-net.top  provides-onlykey.top  (+24 more)
srv/: user_formulas  user_pillar  user_salt
(+730 files in other folders)
